fixed z-index for loader

--- a/app/globals.css
+++ b/app/globals.css
@@ -94,6 +94,7 @@ body {
   -ms-transition: bottom 1s ease;
   -o-transition: bottom 1s ease;
   background-color: #111927;
+  z-index: 9999;
 }
 
 .loader.hide{
@@ -254,5 +255,54 @@ body {
 	font-size: 11px;
 	color: #a0a0a0;
 	width: 200px;
+}
+
+.component-loader-ripple {
+  display: inline-block;
+  position: relative;
+  width: 80px;
+  height: 80px;
+}
+.component-loader-ripple div {
+  position: absolute;
+  border: 4px solid #fff;
+  opacity: 1;
+  border-radius: 50%;
+  animation: component-loader 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  -webkit-animation: component-loader 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+}
+.component-loader div:nth-child(2) {
+  animation-delay: -0.5s;
+}
+
+@keyframes component-loader {
+  0% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 0;
+  }
+  4.9% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 0;
+  }
+  5% {
+    top: 36px;
+    left: 36px;
+    width: 0;
+    height: 0;
+    opacity: 1;
+  }
+  100% {
+    top: 0px;
+    left: 0px;
+    width: 72px;
+    height: 72px;
+    opacity: 0;
+  }
 }
 
